[package]
name = "adk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for ADK agent development — create, run, web, eval, deploy, api_server"
keywords = ["gemini", "agents", "adk", "cli", "tools"]
categories = ["command-line-utilities", "development-tools"]
repository.workspace = true

[dependencies]
rs-genai        = { workspace = true }
rs-adk          = { workspace = true, features = ["gemini-llm"] }
adk-rs-fluent   = { workspace = true, features = ["gemini-llm"] }
adk-server-core = { workspace = true }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
dotenvy = "0.15"
toml = "0.8"

[[bin]]
name = "adk"
path = "src/main.rs"
